--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL = "mongodb+srv://facuvillar:admin@cluster0.98fpn2y.mongodb.net/practicaIntegradora3"
+MONGO_URL = "mongodb+srv://facuvillar:admin@cluster0.98fpn2y.mongodb.net/Ecommerce"
 PORT = 8080
 JWT_COOKIE = "codercookie"
 JWT_SECRET = "CoderKeyQueNadieDebeSaber"
